Fixed input field placeholder aligning on Apple devices - continued

--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,8 @@ img {
 ::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder,
 :-ms-input-placeholder, ::-ms-input-placeholder {
     text-align: center;
+    vertical-align: middle;
+    line-height: 60px;
 }
 
 .leftBorder, .rightBorder, .topBorder, .bottomBorder {
